# sprig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: client.yml  dotnet.yml
Sprig.Core/Messages/: HandshakeRequest.cs  Message.cs  MessageKind.cs  Response.cs
client/: index.html  package.json  tsconfig.json  webpack.config.js
client/assets/: main.css
client/src/: Canvas.ts  Client.ts  app.ts
include/: sprig_client.h  sprig_packet.h  sprig_socket.h  sprig_types.h
server/: .editorconfig  .gitignore  CMakeLists.txt  Sprig.Server.sln  Sprig.sln
server/Client/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  main.cpp
server/Messages/: BeginSessionRequest.cpp  BeginSessionRequest.h  CMakeLists.txt  Message.cpp  Message.h  Response.cpp  Response.h
server/Server/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  WSListener.cpp  WSListener.h  WSSession.cpp  WSSession.h  WsListener.cpp  WsListener.h  main.cpp
server/Sprig.Client/: Client.cs  Program.cs  Sprig.Client.csproj
server/Sprig.Core.Tests/: MessageSerializerTests.cs  Sprig.Core.Tests.csproj
server/Sprig.Core/Messages/: Message.cs  (+5 more)
server/Sprig.Models/: BeginSessionRequest.cs  IMessage.cs  Message.cs  Response.cs  Sprig.Models.csproj
server/Sprig.Server/: Program.cs  Server.cs
server/Sprig.Server.Tests/: HandshakeTests.cs  IntegrationBase.cs  SessionTests.cs  Sprig.Server.Tests.csproj
src/: CMakeLists.txt  sprig_client.c  sprig_packet.c  sprig_server.c  sprig_socket_unix.c
test/: CMakeLists.txt  packet_encoding.c  socket_test.c  sprig_test.h
(+1 files in other folders)
